# mcp-ocr-server

./:  .gitignore  .editorconfig  .env.example  .gitignore  .prettierrc.js  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  eslint.config.js  jest.config.cjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  tsconfig.tests.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
cpp/: CMakeLists.txt  Makefile  binding.gyp  main.cpp  ocr_tool.cpp
cpp/include/: ocr.h
cpp/src/: ocr.cpp  ocr_addon.cpp
cpp/tests/: test_main.cpp
src/: index.ts
src/controllers/: ocrController.ts
src/core/: ocr.ts
src/routes/: ocrRoute.ts
tests/: ocr.test.ts
